syntax = "proto3";

package api;

option go_package = "./;apipb";

service GatekeeperService {
  rpc Allow(AllowRequest) returns (AllowResponse) {}
  rpc ResetLogin(ResetLoginRequest) returns (ResetLoginResponse) {}
  rpc ResetIP(ResetIPRequest) returns (ResetIPResponse) {}
  rpc WhitelistAdd (WhitelistAddRequest) returns (WhitelistAddResponse) {}
  rpc WhitelistRemove (WhitelistRemoveRequest) returns (WhitelistRemoveResponse) {}
}

message AllowRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AllowResponse {
  bool ok = 1;
}

message ResetLoginRequest {
  string login = 1;
}

message ResetLoginResponse {
  bool ok = 1;
}

message ResetIPRequest {
  string ip = 1;
}

message ResetIPResponse {
  bool ok = 1;
}

message WhitelistAddRequest {
  string subnet = 1;
}

message WhitelistAddResponse {
  bool ok = 1;
}

message WhitelistRemoveRequest {
  string subnet = 1;
}

message WhitelistRemoveResponse {
  bool ok = 1;
}
